Add README file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,8 +58,8 @@ db:
   environment:
     MYSQL_DATABASE: deployit
     MYSQL_USER: deployit
-    MYSQL_PASSWORD: USER_PASSWORD
-    MYSQL_ROOT_PASSWORD: ROOT_PASSWORD
+    MYSQL_PASSWORD: <DATABASE PASSWORD>
+    MYSQL_ROOT_PASSWORD: <DATABASE ROOT PASSWORD>
 
 redis:
   image: redis
