--- a/conf/nginx/default.conf
+++ b/conf/nginx/default.conf
@@ -20,9 +20,7 @@ server {
     proxy_pass http://127.0.0.1:3000;
   }
 
-  location /faye {
-    proxy_pass http://127.0.0.1:9393;
-
+  location /cable {
     proxy_http_version 1.1;
 
     proxy_set_header Upgrade $http_upgrade;
@@ -42,5 +40,7 @@ server {
     proxy_send_timeout        850000;
     proxy_read_timeout        850000;
     proxy_connect_timeout     850000;
+
+    proxy_pass http://127.0.0.1:3000;
   }
 }
